[package]
name = "launcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
homedir = "0.3.3"
reqwest = { features = ["blocking", "json", "stream"], version = "0.12.5"}
serde_json = "1.0.122"
serde = { version = "1.0.204", features = ["derive"] }
indicatif = "0.17.8"
tokio = { version = "1.39.2", features = ["full"] }
tokio-macros = "2.4.0"
console = { version =  "0.15.8", default-features = false}